<?xml version="1.0"?>
<package format="2">
  <name>localization</name>
  <version>0.0.0</version>
  <description>Ground Orchestration Node</description>

  <maintainer email="jasonah@seas.upenn.edu">jason hughes</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
